fix spacing issue

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ header {
     width:100%;height:400px;}
 .gmap_iframe {height:400px!important;}
 .social-media{
-    font-size: 38px;
-    letter-spacing: 20px;
-
+    font-size: 36px;
+    letter-spacing: 18px;
 }
